monitoring/base/prometheus/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-dashboard
  namespace: istio-system
spec:
  type: NodePort
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
