monitoring/base/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - prometheus.local
  gateways:
  - istio-ingress/http-ingress-gateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        subset: ""
        port:
          number: 9090
